--- a/vtiger/test-output/old/Default suite/classes.html
+++ b/vtiger/test-output/old/Default suite/classes.html
@@ -11,34 +11,39 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>toCreateAProductWithVendorInformation</td>
-<td>&nbsp;</td></tr>
+<td>toCreateAProductWithVendorInformationTest</td>
+<td>regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>bcConfig</td>
-<td>&nbsp;</td></tr>
+<td>regression smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>bmConfig</td>
-<td>&nbsp;</td></tr>
+<td>regression smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>amConfig</td>
-<td>&nbsp;</td></tr>
+<td>regression smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>acConfig</td>
-<td>&nbsp;</td></tr>
+<td>regression smoke </td>
+</tr>
 </table>
