--- a/vtiger/test-output/old/Default suite/methods.html
+++ b/vtiger/test-output/old/Default suite/methods.html
@@ -1,18 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8a6a0">  <td>23/10/16 14:42:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:product_Module.ToCreateAProductTest@273444fe]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@944140566</td>   <td></td> </tr>
-<tr bgcolor="a8a6a0">  <td>23/10/16 14:43:16</td>   <td>31072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:product_Module.ToCreateAProductTest@273444fe]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@944140566</td>   <td></td> </tr>
-<tr bgcolor="a8a6a0">  <td>23/10/16 14:43:18</td>   <td>33284</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:product_Module.ToCreateAProductTest@273444fe]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944140566</td>   <td></td> </tr>
-<tr bgcolor="e4b4b2">  <td>23/10/16 14:42:49</td>   <td>4198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToCreateAProductTest.toCreateAProductWithVendorInformation()[pri:0, instance:product_Module.ToCreateAProductTest@273444fe]">toCreateAProductWithVendorInformation</td> 
-  <td>main@944140566</td>   <td></td> </tr>
-<tr bgcolor="a8a6a0">  <td>23/10/16 14:42:40</td>   <td>-4971</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:product_Module.ToCreateAProductTest@273444fe]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944140566</td>   <td></td> </tr>
-<tr bgcolor="a8a6a0">  <td>23/10/16 14:42:40</td>   <td>-5013</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:product_Module.ToCreateAProductTest@273444fe]">&gt;&gt;bsConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944140566</td>   <td></td> </tr>
-<tr bgcolor="a8a6a0">  <td>23/10/16 14:43:19</td>   <td>33967</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:product_Module.ToCreateAProductTest@273444fe]">&lt;&lt;asConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944140566</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>23/10/19 15:02:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:product_Module.ToCreateAProductTest@1750fbeb]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="b5be6a">  <td>23/10/19 15:02:40</td>   <td>3768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToCreateAProductTest.toCreateAProductWithVendorInformationTest()[pri:2, instance:product_Module.ToCreateAProductTest@1750fbeb]">toCreateAProductWithVendorInformationTest</td> 
+  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>23/10/19 15:02:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:product_Module.ToCreateAProductTest@1750fbeb]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>23/10/19 15:02:10</td>   <td>-25876</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:product_Module.ToCreateAProductTest@1750fbeb]">&gt;&gt;bcConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="b5be6a">  <td>23/10/19 15:02:40</td>   <td>3768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToCreateAProductTest.toCreateAProductWithVendorInformationTest()[pri:2, instance:product_Module.ToCreateAProductTest@1750fbeb]">toCreateAProductWithVendorInformationTest</td> 
+  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>23/10/19 15:02:40</td>   <td>4396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:product_Module.ToCreateAProductTest@1750fbeb]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>23/10/19 15:03:01</td>   <td>24762</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:product_Module.ToCreateAProductTest@1750fbeb]">&lt;&lt;asConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>23/10/19 15:02:09</td>   <td>-26496</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:product_Module.ToCreateAProductTest@1750fbeb]">&gt;&gt;bsConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>23/10/19 15:02:40</td>   <td>4396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:product_Module.ToCreateAProductTest@1750fbeb]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="b5be6a">  <td>23/10/19 15:02:40</td>   <td>3768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ToCreateAProductTest.toCreateAProductWithVendorInformationTest()[pri:2, instance:product_Module.ToCreateAProductTest@1750fbeb]">toCreateAProductWithVendorInformationTest</td> 
+  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>23/10/19 15:02:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:product_Module.ToCreateAProductTest@1750fbeb]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>23/10/19 15:02:40</td>   <td>4396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:product_Module.ToCreateAProductTest@1750fbeb]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
 </table>
