--- a/vtiger/test-output/old/Suite/methods-not-run.html
+++ b/vtiger/test-output/old/Suite/methods-not-run.html
@@ -1,5 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>product_Module.ToCreateAProductTest.toCreateAProductWithVendorInformationTest</td></tr>
+<tr><td>genericUtility.BaseClass.bsConfig</td></tr>
+<tr><td>genericUtility.BaseClass.asConfig</td></tr>
 <tr><td>genericUtility.BaseClass.asConfig</td></tr>
 <tr><td>genericUtility.BaseClass.bsConfig</td></tr>
 </table>
